--- a/demo/pom.xml
+++ b/demo/pom.xml
@@ -71,6 +71,12 @@
             <artifactId>mysql-connector-j</artifactId>
             <scope>runtime</scope>
         </dependency>
+        <!-- 用于测试安全扫描的三方件，fastjson 1.2.68 存在反序列化漏洞 -->
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.68</version>
+        </dependency>
     </dependencies>
 
     <build>
